<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/beberagua"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintStart_toStartOf="@+id/container_header"
        />

    <ImageView
        android:id="@+id/btn_redefinir"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_refresh"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        />

    <EditText
        android:id="@+id/et_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:textColorHint="@android:color/holo_blue_dark"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/et_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_idade"
        android:textColorHint="@android:color/holo_blue_dark"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/et_peso"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/txt_btn_calc"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_btn"
        />

    <View
        android:id="@+id/container_resultado_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/tv_resultadoMl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/container_resultado_ml"
        app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
        app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        />

    <Button
        android:id="@+id/btn_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_lembrete"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
        android:id="@+id/btn_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/txt_btn_alarme"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_lembrete"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
        />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hora"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dois_pontos"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        android:layout_marginTop="18dp"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_minutos"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>